--- a/templates/index.html
+++ b/templates/index.html
@@ -324,7 +324,8 @@
         (num(row.raw_score, num(row.score, 0)) * 10.0) +
         (num(row.raw_pre3x, num(row.pre3x, 0)) * 2.0) +
         (num(row.raw_hist_wr, num(row.hist_wr, 0) / 100.0) * 100.0) +
-        (Math.max(0, num(row.raw_bb_expansion, num(row.bb_expansion, 0))) * 300.0)
+        (Math.max(0, num(row.raw_bb_expansion, num(row.bb_expansion, 0))) * 300.0) +
+        (num(row.raw_pattern_similarity, num(row.pattern_similarity, 0) / 100.0) * 1000.0)
       );
       tr.dataset.rank = String(num(row.rank_score, computedRank));
       tr.dataset.pre3x = String(num(row.raw_pre3x, num(row.pre3x, 0)));
