Harden startup: fast-fail calendar feeds and defer initial event fetch

--- a/templates/index.html
+++ b/templates/index.html
@@ -653,7 +653,7 @@
       }
     });
 
-    loadCalendar([]);
+    // Initial calendar load can block on external feeds; defer until scan completes.
   </script>
 </body>
 </html>
