--- a/templates/index.html
+++ b/templates/index.html
@@ -313,6 +313,7 @@
             <span class="pill">${model.row.setup}</span>
             <span class="pill">Score ${num(model.row.setup_score, 0).toFixed(1)}</span>
             <span class="pill">BBExp ${num(model.row.bb_expansion, 0).toFixed(3)}</span>
+            <span class="pill">BBNow ${num(model.row.bb_width_now, 0).toFixed(3)}</span>
             <span class="pill">${bbWindowOk ? 'BBW 5-14d OK' : `BBW start ${bbStartAge}d`}</span>
           </div>
         </div>
