--- a/templates/index.html
+++ b/templates/index.html
@@ -319,6 +319,8 @@
             <span class="pill">BBNow ${num(model.row.bb_width_now, 0).toFixed(3)}</span>
             <span class="pill">BBPct ${num(model.row.bb_width_pct, 0).toFixed(1)}%</span>
             <span class="pill">BBSlope3 ${num(model.row.bb_slope3, 0).toFixed(4)}</span>
+            <span class="pill">BBOsc ${num(model.row.bb_osc, 0).toFixed(2)}</span>
+            <span class="pill">${model.row.bb_regime ? 'BBW Regime ON' : 'BBW Regime OFF'}</span>
             <span class="pill">BBxMonth ${num(model.row.bb_vs_prev_month, 0).toFixed(2)}x</span>
             <span class="pill">BB2xAge ${num(model.row.bb_double_age, 999)}d</span>
             <span class="pill">BandRide ${num(model.row.band_ride_score, 0).toFixed(2)}</span>
